Fix center align error after last change

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,6 +22,8 @@ body {
 .ut {
   width: 100%;
   max-width: 1320px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hode {
@@ -29,7 +31,8 @@ body {
   flex-flow: row wrap;
   justify-content: space-between;
   padding: 0 1em;
-  margin: 1em 0 4em;
+  margin-top: 1em;
+  margin-bottom: 4em;
 
   p {
     flex: 1 1 100%;
